# projeto-machine

./: app.py  pyproject.toml
