[project]
name = "projeto-machine"
version = "0.1.0"
description = "/mount/src/projeto-machine/README.md"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scikit-learn (>=1.6.1,<2.0.0)",
    "streamlit (>=1.42.0,<2.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


